Removed home button for moderators, fixed style Prevented buttons from overlapping the quiz information in moderated mode, and removed all home buttons for moderators. Added a home button for users in moderated mode.

--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -27,6 +27,7 @@ header {
     width: 99%;;
     padding: 20px 0;
     color: #D7E8BA;
+    background-color:#0C1B33;
     display: flex;
     justify-content: flex-end;
     align-items: center;
